<resources>
    <string name="ok_bt">确定</string>

    <string name="frameprogress">正在加载,请稍等...</string>
    <string name="app_frame_result_null">暂无数据</string>

    <string name="mis_folder_all">所有照片</string>
    <string name="mis_preview">预览</string>
    <string name="mis_msg_no_camera">没有系统相机</string>
    <string name="mis_msg_amount_limit">已经达到最高选择数量</string>
    <string name="mis_action_done">完成</string>
    <string name="mis_photo_unit">张</string>
    <string name="mis_tip_take_photo">拍摄照片</string>
    <string name="mis_error_image_not_exist">图片错误</string>
    <string name="mis_action_button_string">%1$s(%2$d/%3$d)</string>
    <string name="mis_error_no_permission">无权限</string>
    <string name="mis_permission_dialog_title">权限拒绝</string>
    <string name="mis_permission_dialog_ok">好</string>
    <string name="mis_permission_dialog_cancel">拒绝</string>
    <string name="mis_permission_rationale">浏览图片需要您提供浏览存储的权限</string>
    <string name="mis_permission_rationale_write_storage">保存拍照图片需要您提供写存储权限</string>
    <!--播放器-->
    <string name="buffering">缓存中</string>

    <!--login&regist start-->
    <string name="login_account_hint">请输入账号</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_psw_hint">请输入密码</string>
    <string name="login_apsw_hint">请再次输入密码</string>
    <string name="login_yzm_hint">请输入验证码</string>
    <string name="login_bt">立即登录</string>
    <string name="login_regist"><![CDATA[<font color="#999999">还没有账号？</font>立即注册&nbsp;>]]></string>
    <string name="regist_bt">注册</string>
    <string name="map_address">地址</string>
    <string name="map_mph">门牌号</string>
    <string name="map_mph_hint">例如：1栋2单元3楼4号</string>
    <!--login end-->
    <string name="add_bt">添加</string>
    <string name="commit_bt">提交</string>
    <string name="search_hint">输入关键字查询</string>

    <string name="allen_cancel_bt">取消</string>
    <string name="allen_ok_bt">确定</string>
    <string name="allen_delete_bt">删除</string>
    <string name="allen_file_name">文件名</string>
    <string name="allen_file_path">文件路径</string>
    <string name="allen_add_bt">添加</string>

</resources>
