<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <allen.frame.widget.ScaleLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:scale="0.768"
        android:background="@mipmap/ic_login_top"
        android:fitsSystemWindows="true"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/login_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/login_phone_hint"
        android:padding="@dimen/frame_edge_distance"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:drawableStart="@mipmap/ic_phone"
        android:drawablePadding="@dimen/frame_edge_distance"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/frame_text_normal_size"
        android:layout_marginStart="@dimen/frame_32_distance"
        android:layout_marginEnd="@dimen/frame_32_distance"
        android:layout_marginTop="@dimen/frame_40_distance"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_one_distance"
        android:background="@color/gray_line_color"
        android:layout_marginStart="@dimen/frame_32_distance"
        android:layout_marginEnd="@dimen/frame_32_distance"/>
    <allen.frame.widget.ClickDrawEditText
        android:id="@+id/login_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/login_psw_hint"
        android:padding="@dimen/frame_edge_distance"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:drawableLeft="@mipmap/ic_psw"
        android:drawableRight="@mipmap/ic_psw_hide"
        android:drawablePadding="@dimen/frame_edge_distance"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/frame_text_normal_size"
        android:inputType="textPassword"
        android:layout_marginStart="@dimen/frame_32_distance"
        android:layout_marginEnd="@dimen/frame_32_distance"
        android:layout_marginTop="@dimen/frame_edge_distance"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/frame_one_distance"
        android:background="@color/gray_line_color"
        android:layout_marginStart="@dimen/frame_32_distance"
        android:layout_marginEnd="@dimen/frame_32_distance"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_bt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_bt"
        android:textColor="@color/white"
        android:textSize="@dimen/frame_text_normal_size"
        android:padding="@dimen/frame_eight_distance"
        android:gravity="center"
        android:background="@drawable/shape_blue_btn_bg"
        android:layout_marginStart="@dimen/frame_20_distance"
        android:layout_marginEnd="@dimen/frame_20_distance"
        android:layout_marginTop="@dimen/frame_32_distance"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_regist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/frame_text_smaller_size"
        android:textColor="@color/blue"
        android:text="@string/login_regist"
        android:padding="@dimen/frame_edge_distance"
        android:layout_gravity="center_horizontal"/>
</androidx.appcompat.widget.LinearLayoutCompat>