<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        app:contentInsetEnd="0dp"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/text_black_color"
        app:titleTextAppearance="@style/Light.Toolbar.TitleText"
        app:popupTheme="@style/OverflowMenuStyle"
        app:navigationIcon="@drawable/ic_close"
        android:layout_marginTop="@dimen/frame_32_distance">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_gravity="center"
            style="@style/Toolbar.TitleText"
            android:gravity="center"
            />
    </androidx.appcompat.widget.Toolbar>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:text="@string/regist_bt"
        android:gravity="center"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/frame_text_middle_size"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/regist_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_phone_hint"
            android:padding="@dimen/frame_edge_distance"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:drawableStart="@mipmap/ic_phone"
            android:drawablePadding="@dimen/frame_edge_distance"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_normal_size"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"
            android:layout_marginTop="@dimen/frame_edge_distance"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_one_distance"
            android:background="@color/gray_line_color"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/regist_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_psw_hint"
            android:padding="@dimen/frame_edge_distance"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:drawableLeft="@mipmap/ic_psw"
            android:drawablePadding="@dimen/frame_edge_distance"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_normal_size"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"
            android:layout_marginTop="@dimen/frame_edge_distance"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_one_distance"
            android:background="@color/gray_line_color"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/regist_apsw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:hint="@string/login_apsw_hint"
            android:padding="@dimen/frame_edge_distance"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:drawableLeft="@mipmap/ic_psw"
            android:drawablePadding="@dimen/frame_edge_distance"
            android:textColor="@color/text_black_color"
            android:textSize="@dimen/frame_text_normal_size"
            android:inputType="textPassword"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"
            android:layout_marginTop="@dimen/frame_edge_distance"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/frame_one_distance"
            android:background="@color/gray_line_color"
            android:layout_marginStart="@dimen/frame_32_distance"
            android:layout_marginEnd="@dimen/frame_32_distance"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regist_bt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regist_bt"
            android:textColor="@color/white"
            android:textSize="@dimen/frame_text_normal_size"
            android:padding="@dimen/frame_eight_distance"
            android:gravity="center"
            android:background="@drawable/shape_blue_btn_bg"
            android:layout_marginStart="@dimen/frame_60_distance"
            android:layout_marginEnd="@dimen/frame_60_distance"
            android:layout_marginTop="@dimen/frame_32_distance"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>